# khtrm-system

./: .env.template  .eslintrc.cjs  .gitignore  Docker-README.md  QUICK-START.md  README.md  TEST_GUIDE.md  analyze_remote_db.py  env.example  formSQL.txt  ms_access_analysis.md  package.json  pyproject.toml  setup.txt  tsconfig.json  vite.config.js  vite.config.ts
backend/: .dockerignore  Dockerfile
backend/app/: __init__.py  config.py  database.py  database_init.py  main.py
backend/app/models/: __init__.py  assignment.py  base.py  employee.py  route.py  user.py  vehicle.py
backend/app/routers/: __init__.py  dispatcher.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: assignment_service.py
backend/scripts/: check_databases.py  database_analysis.json  dispatcher_tables.json  python-check.py  python-fix.py
deployment/: deploy-windows-server.ps1  docker-compose.external-db.yml  docker-compose.yml
docs/: DATA-ANALYSIS-RESULTS.md  DATA-EXTRACTION-README.md  DISPATCHER-DEVELOPMENT-PLAN.md  DISPATCHER-ENHANCED-GUIDE.md  DISPATCHER-FUNCTIONALITY.md  DISPATCHER-IMPLEMENTATION-COMPLETE.md  EXTRACTION-TOOLS-SUMMARY.md  LOCAL-SERVER-EXTRACTION.md  MS-ACCESS-CODE-EXTRACTION.md  PROJECT-STRUCTURE.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf
frontend/src/: App.vue  env.d.ts  main.js  main.ts  shims-vue.d.ts  style.css
frontend/src/components/: AdminDashboard.vue  AdminFieldSettings.vue  AssignmentManagement.vue  AssignmentTable.vue  CustomFieldBuilder.vue  Dashboard.vue  DatabaseMonitor.vue  FuelManagement.vue  GlobalNotifications.vue  IncidentManagement.vue  LoginForm.vue  NotFound.vue  ParkingManagement.vue  ReportsView.vue  SystemSettings.vue  TableConstructor.vue  UserManagement.vue  UserProfile.vue  VehicleManagement.vue
frontend/src/composables/: useAuth.js  useAuth.ts  useNotifications.js  useNotifications.ts
frontend/src/types/: dispatcher.ts  index.ts
local_db_analysis/: analysis_report_20250711_130404.txt  full_analysis_20250711_130404.json
scripts/: DATABASE_ANALYSIS_README.md  PYTHON_ANALYSIS_GUIDE.md  alternative_db_analysis.bat  analyze_dispatcher_database.bat  enhanced_db_analysis.py  enhanced_dispatcher_analysis.bat  extract_access_data.py  extract_mysql_data.py  extract_windows_data.py  local_db_analysis.py  local_server_extraction.py  python-check.py  python-fix.py  quick_extract.py  remote_py35_analysis.py  requirements.txt  run_db_analysis.bat  setup_extraction.ps1  simple_data_collection.bat  simple_win7_analysis.bat
scripts/simple_win7_analysis/: basic_info.txt  final_summary.txt  fixes_status.txt  mysql_install.txt  mysql_search.txt  ready_commands.txt
